--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@picocss/pico": "^1.5.7",
+    "@tailwindcss/forms": "^0.5.3",
     "firebase": "^9.17.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
